force-app/main/default/objects/Account/fields/Assign_Owner_using_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Assign_Owner_using_Assignment_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assign Owner using Custom Rules</label>
    <type>Checkbox</type>
</CustomField>