force-app/main/default/objects/Account/fields/Bank_Feedback_Email__c.field-meta.xml
<CustomField>
    <fullName>Bank_Feedback_Email__c</fullName>
    <label>Bank Feedback Email</label>
    <type>Email</type>
</CustomField>