force-app/main/default/objects/Account/fields/Commission_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Commission_Entity_Id__c</fullName>
    <description>Reference to DealAdmin ID for BP Hierarchy.</description>
    <externalId>true</externalId>
    <label>Commission_Entity_Id</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>