force-app/main/default/objects/Account/fields/Company_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_Number__c</fullName>
    <label>Company Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>