force-app/main/default/objects/Account/fields/Internal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reference_Number__c</fullName>
    <description>Internal Reference Number</description>
    <label>Internal Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>