force-app/main/default/objects/Account/fields/is4DX__c.field-meta.xml
<CustomField>
    <fullName>is4DX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is4DX</label>
    <type>Checkbox</type>
</CustomField>