force-app/main/default/objects/Account/fields/Is_VAT_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VAT Registered?</label>
    <type>Checkbox</type>
</CustomField>