force-app/main/default/objects/Account/fields/isP40__c.field-meta.xml
<CustomField>
    <fullName>isP40__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isP40</label>
    <type>Checkbox</type>
</CustomField>