force-app/main/default/objects/Account/fields/Marketing_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_From_Name__c</fullName>
    <label>Short name for Marketing</label>
    <length>25</length>
    <type>Text</type>
</CustomField>