force-app/main/default/objects/Account/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <label>Physical Address</label>
    <type>Address</type>
</CustomField>