force-app/main/default/objects/Account/fields/Physical_same_as_Postal__c.field-meta.xml
<CustomField>
    <fullName>Physical_same_as_Postal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Physical same as Postal</label>
    <type>Checkbox</type>
</CustomField>