force-app/main/default/objects/Account/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <label>Postal Address</label>
    <type>Address</type>
</CustomField>