force-app/main/default/objects/Account/fields/Previous_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Trading_Name__c</fullName>
    <label>Previous Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>