force-app/main/default/objects/Account/fields/SAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Number__c</fullName>
    <label>SAP Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>